tests/whiley/valid/test_1125.wyal
define nat(int x) is:
    x >= 0


type nat is (int x)
where:
    nat(x)


assert "type invariant not satisfied":
    if:
        true
    then:
        0 is nat


